--- a/styles/style.css
+++ b/styles/style.css
@@ -6,11 +6,12 @@
     color: rgb(255, 255, 255);
     /* box-sizing: border-box; */
     font-family: 'Open Sans', sans-serif;
-    
+    font-size: 18px;
 }
 .banner{
+    width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.445),rgba(0, 0, 0, 0.445)), url(../images/cow1.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.445),rgba(0, 0, 0, 0.411)), url(../images/cow1.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -27,14 +28,16 @@
 }
 
 .hero-text h1{
-    margin-top: 180px;
-    font-size: 55px;
+    /* margin-top: 180px; */
+    
+    font-size: 48px;
     margin-bottom: 10px;
 }
 .hero-text p{
     font-size: 14px;
     margin-bottom: 30px;
     width: 40%;
+    line-height: 30px;
 }
 
 .hero-text a{
