--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     /* color: rgb(255, 255, 255); */
@@ -8,15 +8,17 @@
     font-family: 'Open Sans', sans-serif;
     font-size: 18px;
 }
-.banner{
+
+.banner {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.445),rgba(0, 0, 0, 0.411)), url(../images/cow1.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.445), rgba(0, 0, 0, 0.411)), url(../images/cow1.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
-.info{
+
+.info {
     width: 90%;
     height: 100%;
     max-width: 1000px;
@@ -28,13 +30,14 @@
     justify-content: center;
 }
 
-.hero-text h1{
+.hero-text h1 {
     /* margin-top: 180px; */
-    
+
     font-size: 48px;
     margin-bottom: 10px;
 }
-.hero-text p{
+
+.hero-text p {
     font-size: 14px;
     /* margin-bottom: 10px; */
     width: 60%;
@@ -53,45 +56,111 @@
     color: white;
 }
 
-.button:hover{
+.button:hover {
     background: black;
     color: tomato;
 }
 
 /*-------------half-width------------*/
-.combined{
+.combined {
     margin-top: 50px;
 }
-.article{
+
+.article {
     box-sizing: border-box;
     margin-left: 150px;
 }
-.flexible-container{
+
+.flexible-container {
     display: flex;
 }
-.half-width{
+
+.half-width {
     max-width: 1000px;
     width: 50%;
     padding: 50px;
 }
-.half-width h1{
+
+.half-width h1 {
     margin-top: 50px;
     font-size: 35px;
     margin-bottom: 20px;
 }
-.half-width p{
+
+.half-width p {
     text-align: justify;
     margin-bottom: 20px;
 }
 
-.flexible-container img{
+.flexible-container img {
     border-radius: 10px;
     width: 452px;
     height: 475px;
-    margin:50px;
+    margin: 50px;
     margin-right: 100px;
 }
-video{
+
+video {
     width: 460px;
     height: 480px;
+}
+
+/*---------------------middle-----------*/
+.direct-help-main{
+    display: flex;
+    margin-top: 20px;
+}
+.direct-help-content{
+    width: 50%;
+    margin-left: 200px;
+    margin-right: 10px;
+    margin-top: 40px;
+    background-color: #ffeaea;
+    margin-bottom: 0px;
+    border-radius: 10px;
+}
+.direct-help-content img{
+    float: left;
+}
+.direct-help-text{
+    margin-left: 90px;
+}
+
+
+/*=================================*/
+.flexible-container-dhelp {
+    display: flex;
+    margin-top: 20px;
+}
+.direct-help-tleft {
+    width: 50%;
+    margin-left: 200px;
+;
+    margin-right: 10px;
+    margin-top: 40px;
+    background-color: #ffeaea;
+    margin-bottom: 0px;
+    border-radius: 10px;
+}
+.direct-help-tleft img {
+    float: left;
+    margin-top: 22px;
+    margin-left: 10px;
+}
+.dhelp-content {
+    margin-left: 90px;
+}
+.direct-help-tright {
+    width: 50%;
+    margin-left: 10px;
+    margin-right: 200px;
+    margin-top: 40px;
+    background-color: #ffeaea;
+    margin-bottom: 0px;
+    border-radius: 10px;
+}
+.direct-help-tright img {
+    float: left;
+    margin-top: 22px;
+    margin-left: 10px;
 }
